syntax = "proto3";

package clientStream;

service ClientStreamService {
  rpc testMethod (stream TestRequest) returns (TestReply) {}
}

message TestRequest {
  string reqMessage = 1;
}

message TestReply {
  repeated string resMessage = 1;
}
